
2014-01-13 Michael Truog   <mjtruog [at] gmail (dot) com>

    * When an external service is using the request_timeout_adjustment
      send a null response if the timeout was exceeded, to prevent extra
      data from being sent to the Erlang VM
    * Fix the java http_req test parsing
    * Fix cloudi_service_quorum absolute integer requirement

2014-01-10 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix performance issues that have been creeping into
      cloudi_service_http_cowboy and apply the same fixes to
      cloudi_service_http_elli and cloudi_service_tcp

2014-01-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make {error, _} results from the cloudi module consistent with the
      {error, _} results from the cloudi_service module
      ('timeout' is used instead of cpg specific Reasons)
    * Change cloudi_service_tcp, cloudi_service_http_cowboy, and
      cloudi_service_http_elli to use the cloudi module to avoid making
      the parent Erlang process a bottleneck
    * Add the websocket_connect and websocket_disconnect arguments to
      cloudi_service_http_cowboy, so that service requests can be sent
      when a websocket connection is created or destroyed
    * Add the use_spdy argument to cloudi_service_http_cowboy
    * Add cloudi_service:dispatcher/1 to provide a Dispatcher Erlang pid
      which can be used beyond the lifetime of the current callback
      (only important in cloudi_service_init/3)
    * Add cloudi_service:context_options/1 for creating cloudi:new/1 options
      based on the current service configuration (for child Erlang pids)

2014-01-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the refresh option to cloudi_service_filesystem to refresh
      the cached filesystem data at a specific interval in seconds
    * Add cloudi_service:key_value_store/3
    * Add cloudi_service:key_value_erase/3
    * Fix cloudi_service_http_cowboy file attachment names
