@@ -1,14 +1,16 @@
 %-*-Mode:erlang;coding:utf-8;tab-width:4;c-basic-offset:4;indent-tabs-mode:()-*-
 % ex: set ft=erlang fenc=utf-8 sts=4 ts=4 sw=4 et:
 
-{application, cloudi_service_quorum, 
-  [{description, "CloudI Quorum Service"},
+{application, cloudi_service_router, 
+  [{description, "CloudI Router Service"},
    {vsn, "@VERSION@"},
    {modules, [
-        cloudi_service_quorum
+        cloudi_service_router
         ]},
    {registered, []},
    {applications, [
+        cloudi_x_quickrand,
+        cloudi_x_trie,
         cloudi_core,
         stdlib,
         kernel
