@@ -59,6 +59,8 @@
    [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
   {app, cloudi_service_quorum,
    [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_service_router,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
   {app, cloudi_service_tcp,
    [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
   {app, cloudi_service_timers,
